--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Tomasz Ciborski <tilosag@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "commander": "^5.1.0",
+    "lodash": "^4.17.15",
+    "node-fetch": "^2.6.0",
     "xml2js": "^0.4.23"
   }
 }
