--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ytstd",
   "version": "1.0.0",
+  "description": "YouTube subtitles downloader",
   "main": "src/index.js",
   "author": "Tomasz Ciborski <tilosag@gmail.com>",
   "license": "UNLICENSED",
